# open_manipulator_x_torque_control

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: effort_controllers.yaml  fkin_params.yaml  fkin_rviz.rviz  hw_control_params.yaml  hw_friction_sweep_params.yaml  hw_gravity_comp_params.yaml  hw_identify_params.yaml  hw_sinusoidal_torque_params.yaml  motorXM430W350T_params.yaml  motor_params.yaml  sim_init_config.yaml
data/: fl_data_1.csv  fl_data_20260512_141209.csv  fl_data_20260512_141321.csv  fl_data_20260512_141914.csv  fl_xyz_data.csv  fl_xyz_new_data.csv  torque_data_20260512_132808.csv  torque_data_20260512_132957.csv  torque_data_20260512_133036.csv  torque_data_20260512_133228.csv  torque_data_20260512_133406.csv  torque_data_20260512_133437.csv
data/act1/: fl_data_2.csv  fl_data_3.csv  fl_data_4.csv  fl_data_5.csv
data/act2/: fl_xyz_data.csv  fl_xyz_new_data.csv
data/lab4/real/act1/: hw_fl_data_1.csv  hw_fl_data_2.csv  hw_fl_data_3.csv
data/lab7/sim/act1/: gz_mrac_joint_adaptive_1.csv
data/lab7/sim/act2/: gz_mrac_joint_adaptive_1.csv
data/lab7/sim/mrac12p/: gz_mrac_joint_12p_adaptive_1.csv  gz_mrac_joint_12p_adaptive_2.csv  gz_mrac_joint_12p_adaptive_3.csv  gz_mrac_joint_12p_adaptive_4.csv
launch/: fkin_rviz.launch.py  friction_sweep.launch.py  gravity_comp_gz.launch.py  gravity_comp_hw.launch.py  identify_hw.launch.py  torque_hw_act1.launch.py  torque_hw_act2.launch.py  torque_sim.launch.py  tvlqr_hw.launch.py
meshes/: base_plate_02.stl  obstacle_mdf.stl
plots/lab4/real/act1/test1/: torques_plot.eps  tracking_plot_dq.eps  tracking_plot_error.eps  tracking_plot_q.eps
plots/lab4/real/act1/test2/: torques_plot.eps  tracking_plot_dq.eps  tracking_plot_error.eps  tracking_plot_q.eps
plots/lab4/real/act1/test3/: torques_plot.eps  tracking_plot_dq.eps  tracking_plot_error.eps  tracking_plot_q.eps
plots/lab7/sim/mrac12p/test1_adaptive/: plot_dq_tracking.eps  plot_params.eps  plot_q_error.eps  plot_q_tracking.eps  plot_surfaces.eps  plot_torques.eps
plots/lab7/sim/mrac12p/test2_adaptive/: plot_dq_tracking.eps  plot_params.eps  plot_q_error.eps  plot_q_tracking.eps  plot_surfaces.eps  plot_torques.eps
plots/lab7/sim/mrac12p/test3_adaptive/: plot_dq_tracking.eps  plot_params.eps  plot_q_error.eps  plot_q_tracking.eps  plot_surfaces.eps  (+1 more)
scripts/: compare_urdf_dynamics.py  kill_gazebo.sh  xacro_oneline.sh
src/: fl_control_node.cpp  fl_control_node_base.cpp  gz_fl_control_node.cpp  gz_fl_control_node_base.cpp  gz_io_control_node.cpp  gz_io_control_node_base.cpp  hw_fl_control_node.cpp  hw_fl_control_node_base.cpp  hw_io_control_node.cpp  hw_io_control_node_base.cpp  io_control_node.cpp  io_control_node_base.cpp  plots_FL_control.m  plots_IO_control.m  plots_q_dq_tau.m  plots_torque_control.m  torque_test_node.cpp
src/Diagnostics/: hw_sinusoidal_torque_node.cpp  hw_torque_probe_node.cpp
src/Diagnostics/MATLAB/: sinusoidal_torque_analysis.m
src/Feedback Linearization/MATLAB/: plots_FL_control.m  plots_IO_control.m
src/Feedback Linearization/instructor/: gz_fl_control_node.cpp  gz_io_control_node.cpp  hw_fl_control_node.cpp  hw_io_control_node.cpp
src/Feedback Linearization/student/: gz_fl_control_node_base.cpp  gz_io_control_node_base.cpp  hw_fl_control_node_base.cpp  hw_io_control_node_base.cpp
src/Forward Kinematics/: fkin_display_node.py  hw_fkin_node.cpp
src/Gravity Compensation/: gz_gravity_comp_node.cpp  hw_gravity_comp_node.cpp
src/Identification/: Ident_OpenManX_XM430W350T_procedure.md  assemble_motor_params.py  hw_identify_node.cpp  hw_sinusoidal_torque_node.cpp  identify_alpha.py  identify_friction.py  identify_motor_model.py
src/Identification/MATLAB/: Lab_Identification.m  sinusoidal_torque_analysis.m
src/Impedance/: hw_impedance_control_node.cpp
src/Model Reference Adaptive Control/MATLAB/: plots_MRAC_joint.m  plots_MRAC_joint_12p.m
src/Model Reference Adaptive Control/instructor/: gz_MRAC_joint_12p_node.cpp  gz_MRAC_joint_node.cpp  hw_MRAC_joint_12p_node.cpp
src/Model Reference Adaptive Control/student/: gz_MRAC_joint_12p_node_base.cpp  gz_MRAC_joint_node_base.cpp  hw_MRAC_joint_12p_node_base.cpp
src/Sliding Mode/MATLAB/: fk_cart_ref.m  plots_SMC_art.m  plots_SMC_cart.m  plots_SMC_comp_art.m  plots_SMC_comp_cart.m  plots_SMC_comp_rob_art.m  plots_SMC_comp_rob_cart.m  plots_SMC_comp_rob_joint.m  plots_SMC_comp_sf_art.m  plots_SMC_comp_sf_cart.m  plots_SMC_comp_sf_joint.m  plots_SMC_joint.m
src/Sliding Mode/instructor/: gz_SMCI_cart_node.cpp  gz_SMC_art_node.cpp  gz_SMC_cart_node.cpp  gz_SMC_joint_node.cpp  hw_SMCI_cart_node.cpp  hw_SMC_cart_node.cpp  hw_SMC_joint_node.cpp
src/Sliding Mode/student/: gz_SMC_art_node_base.cpp  gz_SMC_cart_node_base.cpp  gz_SMC_joint_node_base.cpp  hw_SMC_cart_node_base.cpp  hw_SMC_joint_node_base.cpp
src/Trajectory Optimization TV-LQR/MATLAB/: Lab5_Compare_Sim_Real.m  Lab5_Export_Refs.m  Lab5_Plot_Lab5.m  Lab5_Plot_SimReal.m  Lab5_Sol.m  PreLab5_Sol_Final.m  lab5_act1_sol.m  lab5_act2_sol.m  zmin.mat  zmin2.mat  zmin4.mat
src/Trajectory Optimization TV-LQR/MATLAB/Past Solutions/: Lab5_Sol_Act1.m  Lab5_Sol_Act2.m
src/Trajectory Optimization TV-LQR/MATLAB/functions/: build_omdyn_mex.m  gen_OMDyn.m  open_manx_fkin.m  validate_omdyn_vs_urdf.m
src/Trajectory Optimization TV-LQR/MATLAB/instructor/: OMDyn.m  OMDyn.mexa64  gen_OMDyn.m  lab5_act1_sol.m  lab5_act2_reto_sol.m  lab5_act2_sol.m  validate_omdyn_vs_urdf.m
src/Trajectory Optimization TV-LQR/MATLAB/student/: lab5_act1_student.m  lab5_act2_student.m  open_manx_fkin.mexa64
src/Trajectory Optimization TV-LQR/MATLAB/test/: OMDyn.m  OMDyn_openmani.m  OMDyn_original.m  gen_OMDyn.m
src/Trajectory Optimization TV-LQR/instructor/: gz_tvlqr_node.cpp  hw_tvlqr_node.cpp
src/Trajectory Optimization TV-LQR/references/: K_TV.txt  dq_ref.txt  q_ref.txt  tau_gravity.txt  time_ref.txt  u_ref.txt  y_ref.txt
urdf/: open_manipulator_x.urdf  openmani.urdf
worlds/: empty_world_fortress.sdf
xacro/: open_manipulator_x.urdf.xacro  open_manipulator_x_effort.ros2_control.xacro  open_manipulator_x_effort_robot.urdf.xacro
(+8 files in other folders)
