<?xml version="1.0"?>
<package format="3">
  <name>open_manipulator_x_torque_control</name>
  <version>0.1.0</version>
  <description>
    Torque/effort control for OpenMANIPULATOR-X in Gazebo simulation.
    Solo para simulacion. No usar con hardware real.
  </description>
  <maintainer email="smorales@utec.edu.pe">Sergio Morales</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamixel_sdk</depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>open_manipulator_x_description</exec_depend>
  <exec_depend>open_manipulator_x_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
